# rokbattles

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  HELP.md  README.md  api.Dockerfile  biome.json  biome.jsonc  build.gradle.kts  docker-compose.yml  package.json  platform.Dockerfile  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  release.yml
apps/rokbattles-bot/: package.json  tsconfig.json
apps/rokbattles-marketing/: next.config.ts  package.json  tsconfig.json
apps/rokbattles-new/: .env.example  next.config.ts  package.json
apps/rokbattles-platform/: next.config.ts  package.json  tsconfig.json  vitest.config.mts
apps/rokbattles-platform-legacy/: package.json  tsconfig.json
apps/rokbattles-site/: drizzle.config.ts  next.config.ts  package.json
apps/rokbattles.com/: package.json
apps/roktoolkit.com/: package.json
crates/binidx-cli/: Cargo.toml
crates/binidx-decoder/: Cargo.toml
crates/mail-battle-processor/: Cargo.toml
crates/mail-cli/: Cargo.toml
crates/mail-cli-legacy/: Cargo.toml
crates/mail-cli-legacy/src/: cli.rs  lib.rs  main.rs  mongo.rs  processing.rs
crates/mail-cli/src/: cli.rs  config.rs  dir.rs  error.rs  fs_utils.rs  io.rs  lib.rs  lossless.rs  main.rs  processing.rs  run.rs
crates/mail-decoder/: Cargo.toml
crates/mail-decoder-cli/: Cargo.toml
crates/mail-decoder-legacy/: Cargo.toml
crates/mail-decoder-v2/: Cargo.toml
crates/mail-helper/: Cargo.toml
crates/mail-helper-legacy/: Cargo.toml
crates/mail-processor/: Cargo.toml
crates/mail-processor-barcanyonkillboss/: Cargo.toml
crates/mail-processor-battle/: Cargo.toml
crates/mail-processor-battle-legacy/: Cargo.toml
crates/mail-processor-cli/: Cargo.toml
crates/mail-processor-duelbattle2/: Cargo.toml
crates/mail-processor-duelbattle2-legacy/: Cargo.toml
crates/mail-processor-sdk/: Cargo.toml
crates/mail-processor-sdk-legacy/: Cargo.toml
crates/mail-time-detector/: Cargo.toml
crates/mail-type-detector/: Cargo.toml
crates/maildecoder/: Cargo.toml
crates/maildecoder-cli/: Cargo.toml
crates/rokbattles-api/: Cargo.toml
crates/rokbattles-api/src/: main.rs
crates/rokbattles-api/src/auth/: discord.rs  mod.rs  session.rs
crates/rokbattles-api/src/v1/: ingress.rs  mod.rs  report.rs  reports.rs
crates/rokbattles-bot/: Cargo.toml
crates/rokbattles-bot/.cargo/: config.toml
crates/rokbattles-bot/src/: main.rs
crates/rokbattles-bot/src/commands/: help.rs  mailcache.rs  mod.rs
crates/rokbattles-bot/src/framework/: command.rs  mod.rs  registry.rs
crates/rokbattles-ingress/: Cargo.toml
crates/rokbattles-ingress-legacy/: Cargo.toml
crates/rokbattles-ingress-legacy/src/: main.rs
crates/rokbattles-ingress-legacy/src/v1/: ingress.rs  mod.rs
crates/rokbattles-ingress/src/: clamav.rs  config.rs  error.rs  handlers.rs  main.rs  rate_limit.rs  state.rs  storage.rs
crates/rokbattles-ingress/src/v1/: ingress.rs
crates/rokbattles-processor/: Cargo.toml
crates/rokbattles-processor-legacy/: Cargo.toml
crates/rokbattles-processor-legacy/src/: main.rs
crates/rokbattles-processor/src/: config.rs  error.rs  mail.rs  main.rs  processing.rs  storage.rs
crates/rokbattles-tauri/: package.json  vite.config.ts
crates/rokbattles-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/rokbattles-tauri/src-tauri/capabilities/: default.json
crates/rokbattles-tauri/src-tauri/src/: app_config.rs  lib.rs  main.rs  watcher.rs
crates/rokbattles-tauri/src-tauri/src/watcher/: config.rs  mail.rs  scan.rs  state.rs  store.rs  upload.rs
crates/rokbattles-trends/: Cargo.toml
crates/rokbattles-trends/src/: main.rs
datasets/: armaments.yaml  buffs.yaml  commanders.yaml  equipment.yaml  formations.yaml  inscriptions.yaml  loot.yaml  relics.yaml
infra/: Dockerfile  api.Dockerfile  bot.Dockerfile  ingress.Dockerfile  platform.Dockerfile  processor.Dockerfile
legal/: cookie-policy.md  privacy-policy.md  terms-of-service.md
samples/: 1002579517552941234-processed.json  1002579517552941234.json  100439187175234501131-processed.json  10163399175529366525-processed.json  10224136175529255431-processed.json  1036544617552967227-processed.json  1036544617552967227.json  1036588117552967397-processed.json  1036588117552967397.json  1036600917552967417-processed.json  1036600917552967417.json  12022859175776747531-processed.json  16125090175544125330-processed.json  1749144652381995-processed.json  1749144676117566-processed.json  1750440614619509-processed.json  1750440614619509.json  1750448030655413-processed.json  1752843523696750-processed.json  1752843523696750.json  1752843978726553-processed.json  1752844041706806-processed.json  1754104979932846-processed.json  1755293547309756-processed.json  1755294105048768-processed.json  1755383965547515-processed.json  1755383965547515.json  1755439574952851-processed.json  1755439574952851.json  1755506602437943-processed.json  1755967237048962-processed.json  1755967237048962.json  1756618149841276-processed.json  1756812327093062-processed.json  1756812327093062.json  1757254273234667-processed.json  1757254273234667.json  1757256346231676-processed.json  1757256346231676.json  1757276762433967-processed.json  (+51 more)
samples/BarCanyonKillBoss/: Persistent.Mail.21162669176948646831  Persistent.Mail.21162669176948646831-processed.json  Persistent.Mail.21162669176948646831.json  Persistent.Mail.21163846176948651431  Persistent.Mail.21163846176948651431-processed.json  Persistent.Mail.21163846176948651431.json  Persistent.Mail.21165139176948655731  Persistent.Mail.21165139176948655731-processed.json  Persistent.Mail.21165139176948655731.json  Persistent.Mail.21166695176948659931  Persistent.Mail.21166695176948659931-processed.json  Persistent.Mail.21166695176948659931.json  Persistent.Mail.21168355176948665931  Persistent.Mail.21168355176948665931-processed.json  Persistent.Mail.21168355176948665931.json  Persistent.Mail.21180037176948703831  Persistent.Mail.21180037176948703831-processed.json  Persistent.Mail.21191257176948740031  (+84 more)
(+997 files in other folders)
