[workspace]
members = [
    "crates/mail-cli",
    "crates/mail-decoder",
    "crates/mail-processor-barcanyonkillboss",
    "crates/mail-processor-battle",
    "crates/mail-processor-duelbattle2",
    "crates/mail-processor-sdk",
    "crates/rokbattles-ingress"
]
resolver = "3"

[workspace.dependencies]
axum = "0.8.8"
bytes = "1.11.0"
clap = "4.5.55"
dotenvy = "0.15.7"
flate2 = { version = "1.1.8", default-features = false }
mongodb = "3.5.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower_governor = { version = "0.8.0", default-features = false }
zstd = "0.13.3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"