[workspace]
members = [
    "crates/mail-cli",
    "crates/mail-cli-legacy",
    "crates/mail-decoder",
    "crates/mail-decoder-legacy",
    "crates/mail-helper-legacy",
    "crates/mail-processor-barcanyonkillboss",
    "crates/mail-processor-battle",
    "crates/mail-processor-battle-legacy",
    "crates/mail-processor-duelbattle2",
    "crates/mail-processor-duelbattle2-legacy",
    "crates/mail-processor-sdk",
    "crates/mail-processor-sdk-legacy",
    "crates/rokbattles-ingress",
    "crates/rokbattles-ingress-legacy",
    "crates/rokbattles-processor",
    "crates/rokbattles-processor-legacy",
    "crates/rokbattles-tauri/src-tauri",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.57", features = ["derive"] }
itoa = "1.0.17"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "limit", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tikv-jemallocator = "0.6.1"
tauri-build = { version = "2.5.4", features = [] }
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
futures-util = "0.3.31"
mongodb = "3.5.1"
zstd = "0.13.3"
blake3 = "1.8.3"
reqwest = "0.12.28"
futures = "0.3.31"
tauri-plugin-updater = "2.10.0"
memchr = "2.7.6"
notify = "8.2.0"
tempfile = "3.24.0"
bytes = "1.11.1"
dotenvy = "0.15.7"
flate2 = { version = "1.1.9", default-features = false }
thiserror = "2.0.18"
tower_governor = { version = "0.8.0", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
