[workspace]
members = [
    "crates/binidx-cli",
    "crates/binidx-decoder",
    "crates/mail-cli",
    "crates/mail-decoder",
    "crates/mail-processor-barcanyonkillboss",
    "crates/mail-processor-battle",
    "crates/mail-processor-duelbattle2",
    "crates/mail-processor-sdk",
    "crates/rokbattles-ingress",
    "crates/rokbattles-processor",
    "crates/rokbattles-tauri/src-tauri",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
clap = "4.5.58"
axum = "0.8.8"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tauri-build = "2.5.5"
tauri = "2.10.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
mongodb = "3.5.1"
zstd = "0.13.3"
reqwest = "0.12.28"
futures = "0.3.31"
tauri-plugin-updater = "2.10.0"
notify = "8.2.0"
tempfile = "3.25.0"
bytes = "1.11.1"
dotenvy = "0.15.7"
flate2 = { version = "1.1.9", default-features = false }
thiserror = "2.0.18"
tower_governor = { version = "0.8.0", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
