[package]
name = "mail-cli"
version = "0.3.11"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
mail-decoder = { path = "../mail-decoder" }
mail-helper = { path = "../mail-helper" }
mail-processor-battle = { path = "../mail-processor-battle" }
mail-processor-duelbattle2 = { path = "../mail-processor-duelbattle2" }
mongodb = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
