[package]
name = "rokbattles-api"
version = "0.1.6"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
mail-decoder = { path = "../mail-decoder" }
mongodb = { workspace = true }
zstd = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
mail-helper = { path = "../mail-helper" }
serde = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }