[package]
name = "rokbattles-bot"
version = "0.3.10"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }