[package]
name = "rokbattles-ingress-legacy"
version = "0.3.12"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["limit", "timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
mail-decoder-legacy = { path = "../mail-decoder-legacy" }
mail-decoder = { path = "../mail-decoder" }
mongodb = { workspace = true }
zstd = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
mail-helper-legacy = { path = "../mail-helper-legacy" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
