[package]
name = "rokbattles-processor-legacy"
version = "0.3.12"
edition = "2024"

[dependencies]
tokio = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }
mail-processor-battle-legacy = { path = "../mail-processor-battle-legacy" }
mail-processor-duelbattle2-legacy = { path = "../mail-processor-duelbattle2-legacy" }
mail-helper-legacy = { path = "../mail-helper-legacy" }
mail-decoder-legacy = { path = "../mail-decoder-legacy" }
futures = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
