[package]
name = "rokbattles-processor"
version = "0.3.9"
edition = "2024"

[dependencies]
tokio = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }
mail-processor = { path = "../mail-processor" }
mail-processor-duelbattle2 = { path = "../mail-processor-duelbattle2" }
mail-helper = { path = "../mail-helper" }
mail-decoder = { path = "../mail-decoder" }
futures = { workspace = true }
blake3 = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
