[package]
name = "rokbattles-processor"
version = "0.3.11"
edition = "2024"

[dependencies]
tokio = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }
mail-processor-battle = { path = "../mail-processor-battle" }
mail-processor-duelbattle2 = { path = "../mail-processor-duelbattle2" }
mail-helper = { path = "../mail-helper" }
mail-decoder = { path = "../mail-decoder" }
futures = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
