[package]
name = "rokbattles-processor"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = { workspace = true }
zstd = { workspace = true }
dotenvy = { workspace = true }
mail-processor-battle = { path = "../mail-processor-battle" }
mail-processor-duelbattle2 = { path = "../mail-processor-duelbattle2" }
mail-processor-barcanyonkillboss = { path = "../mail-processor-barcanyonkillboss" }
mail-processor-sdk = { path = "../mail-processor-sdk" }
