[package]
name = "rokbattles-trends"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
