[package]
name = "rokbattles-tauri"
version = "0.1.9"
description = "A community-driven platform for sharing battle reports and surfacing actionable trends in Rise of Kingdoms."
authors = ["Sylke Technologies, LLC"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rokbattles_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
mail-decoder = { path = "../../mail-decoder" }
mail-helper = { path = "../../mail-helper" }
tauri-plugin-updater = { workspace = true }
